--- a/search.html
+++ b/search.html
@@ -124,7 +124,7 @@
   <body>
   
   <div id="title" align="center">
-  	<img src="roodle.jpg" />
+  	<img src="http://www.kaceycoughlin.com/Roodle/roodle.jpg" />
   </div>
     <table width="100%">
       <tr>
